--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
   font-size: 2rem;
   color: #eff4ff;
 }
+.main button {
+    background-color: #E50914;
+    padding: 20px;
+    border-radius: 10px;
+    color: #fdfdfd;
+    font-size: 20px;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+    transition: 1s ease in;
+}
+
+.main button:hover {
+    box-shadow: 5px -3px 7px 1px;
+}
     </style>
     <title>Document</title>
 </head>
@@ -29,7 +43,7 @@
     <div class="main">
         <h1>ঈশিতা তোমারে কতো ভালোবাসি তা তুমি জানো না,জানার জন্য নিচে ক্লিক করো</h3>
 
-        <button onclick="love()">Check BMI</button>
+        <button onclick="love()">Check Your love</button>
 
         <p id="result"></p>
     </div>
