--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   text-align: center;
   background: linear-gradient(90deg,rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
   color: wheat;
-}
+  padding: 20px;
+  }
 .main h1 {
   font-size: 2rem;
   color: pink;
